- Adding a plugin concept for core - Addressing an issue with the dropdown list showing improperly when the parent is overflowing - Hiding dropdown on scroll

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -32,6 +32,11 @@
   }
 }
 
-body, html, #app {
+body, html {
   @apply h-full w-full;
+}
+
+#overlayManager {
+  @apply absolute top-0 left-0 contents pointer-events-none;
+  contain: layout;
 }
